--- a/LumenSoft.UI.Site/Views/Shared/_Layout.cshtml
+++ b/LumenSoft.UI.Site/Views/Shared/_Layout.cshtml
@@ -27,6 +27,12 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="Produtos" asp-controller="Cadastro" asp-action="Index">Cadastro</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="Vendas" asp-controller="Pedidos" asp-action="Index">Pedidos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
